# authentication-service

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  fly.production.toml  fly.staging.toml
.github/actions/setup-poetry/: action.yml
.github/workflows/: build_deploy_production.yaml  build_deploy_staging.yaml  deploy_production.yaml  deploy_staging.yaml  lint.yaml  publish_image_production.yaml  publish_image_staging.yaml  security.yaml  test.yaml
docs/: index.html  openapi.yaml
src/: .env.sample  .env.sample.dev  .env.sample.production  main.py  mkdocs.yml  pyproject.toml  settings.py
src/auth/dependency/: __init__.py  group.py  permission.py  user.py
src/auth/model/: __init__.py  group.py  group_permission.py  permission.py  user.py  user_group.py
src/auth/model/tests/: conftest.py  test_group_model.py  test_permission_model.py  test_user_model.py
src/auth/repository/: __init__.py  group.py  permission.py  user.py
src/auth/repository/contracts/: __init__.py  group.py  permission.py  user.py
src/auth/repository/tests/: conftest.py  test_group_repository.py  test_permission_repository.py  test_user_repository.py
src/auth/router/: __init__.py  authentication.py  group.py  permission.py  router.py  user.py
src/auth/router/tests/: conftest.py  test_endpoint_authentication.py  test_endpoint_group.py  test_endpoint_permission.py  test_endpoint_user.py
src/auth/schemas/: __init__.py
src/auth/schemas/group/: __init__.py  group_add.py  group_list.py  group_update.py
src/auth/schemas/permission/: __init__.py  permission_add.py
src/auth/schemas/token/: __init__.py
src/auth/schemas/user/: user_add.py  user_list.py  user_update.py
src/auth/service/: __init__.py  group.py  permission.py  user.py
src/auth/service/contracts/: __init__.py  group.py  permission.py  user.py
src/auth/service/tests/: conftest.py  test_group_service.py  test_permission_service.py  test_user_service.py
src/database/: __init__.py  get_url_database.py  session.py
src/migrations/: env.py
src/migrations/versions/: cd99142c8ea9_.py
src/utils/mocks/: __init__.py  mock_create_session.py
src/utils/security/: __init__.py  criptografy.py  token.py
src/utils/security/contracts/: __init__.py  criptografy.py
src/utils/security/tests/: test_criptografy.py  test_token.py
src/utils/swagger/: generate_docs.py
