[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Jonathan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.118.2"}
sqlalchemy = "^2.0.43"
alembic = "^1.16.5"
pydantic-settings = "^2.11.0"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
pyjwt = "^2.10.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
taskipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = 'python -m pytest -s --cov=. -x -vv --cov-config=.coveragerc'
dev = 'fastapi dev main.py --host 0.0.0.0 --port 8001'
